trunk/Archive2/78/a3677144284fcb/output
main.cpp:1:27: error: template declaration of 'int x'
 template <typename T> int x;
                           ^
