trunk/Archive2/78/a3677144284fcb/main.cpp
template <typename T> int x;